<?xml version="1.0" encoding="utf-8"?>
<!--
    SPDX-FileCopyrightText: 2025-2026 Andrew Gunnerson
    SPDX-License-Identifier: GPL-3.0-only
-->
<resources>
    <!-- Preference headers -->
    <string name="pref_header_permissions">Permissions</string>
    <string name="pref_header_configuration">Configuration</string>
    <string name="pref_header_run_conditions">Run conditions</string>
    <string name="pref_header_about">About</string>
    <string name="pref_header_debug">Debug</string>

    <!-- Main preferences -->
    <string name="pref_inhibit_battery_opt_name">Disable battery optimization</string>
    <string name="pref_inhibit_battery_opt_desc">Needed to run reliably in the background.</string>
    <string name="pref_allow_notifications_name">Allow notifications</string>
    <string name="pref_allow_notifications_desc">Needed to run reliably in the background and to start and stop Syncthing.</string>
    <string name="pref_local_storage_access_name">Allow local storage access</string>
    <string name="pref_local_storage_access_desc">Needed for Syncthing to access the local storage under <tt>/sdcard</tt>.</string>
    <string name="pref_disable_app_hibernation_name">Disable app hibernation</string>
    <string name="pref_disable_app_hibernation_desc">Needed to prevent Android from automatically removing app permissions after a period of time.</string>
    <string name="pref_open_web_ui_name">Open web UI</string>
    <string name="pref_open_web_ui_desc">Open Syncthing\'s web configuration interface.</string>
    <string name="pref_import_configuration_name">Import configuration</string>
    <string name="pref_import_configuration_desc">Import an existing Syncthing configuration zip file.</string>
    <string name="pref_export_configuration_name">Export configuration</string>
    <string name="pref_export_configuration_desc">Export current Syncthing configuration to a zip file.</string>
    <string name="pref_service_status_name">Syncthing status</string>
    <string name="pref_auto_mode_name">Auto mode</string>
    <string name="pref_auto_mode_desc">Automatically start and stop based on the specified conditions.</string>
    <string name="pref_require_unmetered_network_name">Require unmetered network</string>
    <string name="pref_require_unmetered_network_desc">Only run if the device is connected to an unmetered network (eg. Wi-Fi).</string>
    <string name="pref_run_on_battery_name">Run on battery power</string>
    <string name="pref_run_on_battery_desc">Run when the device is on battery power and the battery level is at least %1$d%%. Syncthing always runs when plugged in.</string>
    <string name="pref_respect_battery_saver_name">Respect battery saver mode</string>
    <string name="pref_respect_battery_saver_desc">Only run when Android\'s battery saver mode is disabled.</string>
    <string name="pref_keep_alive_name">Keep Syncthing alive</string>
    <string name="pref_keep_alive_desc">When Syncthing should not run, pause it instead of shutting it down. The avoids a potential performance hit when scanning large folders on startup.</string>
    <string name="pref_version_name">Version</string>
    <string name="pref_save_logs_name">Save logs</string>
    <string name="pref_save_logs_desc">Save logcat logs to a file.</string>

    <!-- Alerts -->
    <string name="action_details">Details</string>
    <string name="dialog_error_details_title">Error details</string>

    <!-- Main alerts -->
    <string name="alert_import_success">Successfully imported configuration</string>
    <string name="alert_import_failure">Failed to import configuration</string>
    <string name="alert_export_success">Successfully exported configuration</string>
    <string name="alert_export_failure">Failed to export configuration</string>
    <string name="alert_logcat_success">Successfully saved logs to %1$s</string>
    <string name="alert_logcat_failure">Failed to save logs to %1$s</string>

    <!-- Dialogs -->
    <string name="dialog_new_folder_title">New folder</string>
    <string name="dialog_new_folder_message">Enter the name of the new folder to create in %1$s.</string>
    <string name="dialog_new_folder_hint">Name</string>
    <string name="dialog_min_battery_level_title">Minimum battery level</string>
    <string name="dialog_min_battery_level_message">Enter the minimum battery level needed for Syncthing to run.</string>
    <string name="dialog_min_battery_level_hint">Percentage</string>

    <!-- Web UI extra buttons -->
    <string name="web_ui_select_folder">Select folder</string>
    <string name="web_ui_scan_qr_code">Scan QR code</string>

    <!-- Notifications -->
    <string name="notification_channel_persistent_name">Background services</string>
    <string name="notification_channel_persistent_desc">Keeps Syncthing running in the background</string>
    <string name="notification_channel_failure_name">Failure alerts</string>
    <string name="notification_channel_failure_desc">Alerts for errors when starting Syncthing</string>
    <string name="notification_persistent_running_title">Syncthing is running</string>
    <string name="notification_persistent_not_running_title">Syncthing is not running</string>
    <string name="notification_persistent_paused_title">Syncthing is paused</string>
    <string name="notification_persistent_starting_title">Syncthing is starting</string>
    <string name="notification_persistent_stopping_title">Syncthing is stopping</string>
    <string name="notification_persistent_pausing_title">Syncthing is pausing</string>
    <string name="notification_persistent_importing_title">Importing configuration</string>
    <string name="notification_persistent_exporting_title">Exporting configuration</string>
    <string name="notification_failure_run_title">Failed to run Syncthing</string>
    <string name="notification_failure_run_message">Syncthing failed to run properly. To prevent a restart loop, Syncthing has been stopped and placed in manual mode.</string>
    <string name="notification_action_auto_mode">Auto mode</string>
    <string name="notification_action_manual_mode">Manual mode</string>
    <string name="notification_action_start">Start</string>
    <string name="notification_action_stop">Stop</string>
</resources>
